examples/type_system/failing/203_hm_time_caller_missing_io_e400.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: a `with Time` function calls a function that requires IO.
// The HM-layer diagnostic should name `IO` as the missing effect and
// suggest annotating the enclosing function with `with IO`.

fn log_event(msg: String) -> Unit with IO {
    print(msg)
}

fn record_time() -> Unit with Time {
    let _ = now_ms()
    log_event("recorded")
}

fn main() with IO, Time {
    record_time()
}
